--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,8 @@ paginate_path: "/blog/page/:num"
 # https://highlightjs.org/usage/
 markdown: kramdown
 highlighter: rouge
+input: GFM
+syntax_highlighter: rouge
 
 # custom archive
 collections:
