--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,12 @@ paginate_path: "/blog/page/:num"
 markdown: kramdown
 highlighter: rouge
 
+# Markdown Processors
+kramdown:
+  input: GFM
+  auto_ids: true
+  syntax_highlighter: rouge
+
 
 # custom archive
 collections:
