--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: Dev | Bishal Thapa
 email: dev.bith@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Hi 👋, I am Bishal. I write blogs on different
-  stuffs, mostly  on software development which I find interesting. Thanks for coming over.
+ I am Bishal Thapa. I am a Software Developer. 
+
 baseurl: ""
 url: "https://devbith.github.io"
 liveUrl: "https://devbith.github.io"
