--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ description: >- # this means to ignore newlines until "baseurl:"
  I love to read, write, travel and spend quality time with my friends and family.
 
 baseurl: ""
-url: "https://devbith.github.io"
-liveUrl: "https://devbith.github.io"
-twitter_username: devbith
-github_username:  devbith
+url: "https://thapabishal.github.io/blog/"
+liveUrl: "https://thapabishal.github.io/blog/"
+twitter_username: thapabishal
+github_username:  thapabishal
 
 # Build settings
 plugins:
