--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: ""
 url: "https://thapabishal.github.io/blog/"
 liveUrl: "https://thapabishal.github.io/blog/"
-twitter_username: thapabishal
+twitter_username: _bishalthapa
 github_username:  thapabishal
 
 # Build settings
