--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
  I love to read, write, travel and spend quality time with my friends and family.
 
 baseurl: ""
-url: "https://thapabishal.github.io/blog/"
-liveUrl: "https://thapabishal.github.io/blog/"
+url: "https://thapabishal.github.io"
+liveUrl: "https://thapabishal.github.io"
 twitter_username: _bishalthapa
 github_username:  thapabishal
 
