--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: bishalthapa.info.np@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
    Bishal Thapa is passionate software developer. He loves problem solving and new technologies. Most recently, he is enjoying REST architecture, micro-services and cloud computing.
 
-baseurl: "https://bishalthapa.info.np"
+baseurl: ""
 url: "https://bishalthapa.info.np"
 liveUrl: "https://bishalthapa.info.np"
 twitter_username: _bishalthapa
