--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Bishal Thapa | Software Developer
-email: dev.bith@gmail.com
+email: bishalth.x@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
    Bishal Thapa is passionate software developer. He loves problem solving and new technologies. Most recently, he is enjoying REST architecture, micro-services and cloud computing.
 
 baseurl: ""
-url: "https://devbith.github.io"
-liveUrl: "https://devbith.github.io"
-twitter_username: devbith
-github_username:  devbith
+url: "https://bishalthapa.info.np"
+liveUrl: "https://bishalthapa.info.np"
+twitter_username: bishalthapa_x
+github_username:  bishalthapa-x
 
 # Build settings
 plugins:
