--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Bishal Thapa | Senior Software Developer
+title: Bishal Thapa - Senior Software Developer
 email: bishalth.x@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
    Bishal Thapa is a Senior Software Developer with a broad range of interests in the tech world, primarily focused on software engineering.
